@@ -1,6 +1,6 @@
 plugins {
   id("otel.java-conventions")
-  id("com.gradleup.shadow") version "8.3.5"
+  application
 }
 
 description = "TODO"
@@ -9,13 +9,8 @@ otelJava.moduleName.set("io.opentelemetry.integration.tests.tomcat")
 dependencies {
   api("org.testcontainers:junit-jupiter")
 
-  implementation("org.apache.tomcat.embed:tomcat-embed-core:10.0.0")
-
-  implementation(project(":sdk:all"))
-  implementation(project(":exporters:otlp:all"))
+  implementation("org.apache.tomcat.embed:tomcat-embed-core:10.1.39")
 }
-
-apply(plugin = "com.gradleup.shadow")
 
 // Skip OWASP dependencyCheck task on test module
 dependencyCheck {
@@ -26,6 +21,18 @@ tasks.withType<Test>().configureEach {
   jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
   jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
   jvmArgs("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED")
+  // jvmArgs("-Djava.util.logging.config.file=/Users/jberg/code/open-telemetry/opentelemetry-java/integration-tests/tomcat/logging.properties")
+
+  // environment("CATALINA_OUT", "/Users/jberg/code/open-telemetry/opentelemetry-java/integration-tests/tomcat/base/logs")
+}
+
+application {
+  mainClass = "io.opentelemetry.integrationtests.tomcat.MemoryLeakTest"
+  applicationDefaultJvmArgs = listOf(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+  )
 }
 
 tasks {
